Upgrade to Spring Boot 4, register native configuration editors and converters
- Upgrade to Spring Boot 4
- Fix native logging configuration
- Fix native image test configuration
- Register native configuration editors and converters, plus
  additional native property editors
- Update jaxb runtime; include JAXB API in native image
- Align mockserver with Spring Boot 4
- Update surefire etc
- Extend reachability-metadata.json