@@ -1,7 +1,11 @@
 package org.nzbhydra.backup;
 
 import java.io.IOException;
-import java.nio.file.*;
+import java.nio.file.FileVisitResult;
+import java.nio.file.FileVisitor;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
 
 /**
@@ -17,7 +21,7 @@ public class ExtractZipFileVisitor implements FileVisitor<Path> {
     @Override
     public FileVisitResult preVisitDirectory(Path zipDir, BasicFileAttributes attrs) throws IOException {
         // zipDir = unix-pfad
-        Path destDir = Paths.get(destRoot.toString(), zipDir.toString());  // windowspfad
+        Path destDir = Path.of(destRoot.toString(), zipDir.toString());  // windowspfad
         Files.createDirectories(destDir);
         return FileVisitResult.CONTINUE;
     }
@@ -25,7 +29,7 @@ public class ExtractZipFileVisitor implements FileVisitor<Path> {
     @Override
     public FileVisitResult visitFile(Path zipFile, BasicFileAttributes attrs) throws IOException {
         // zipFile = unix-pfad
-        Path dest = Paths.get(destRoot.toString(), zipFile.toString());  // windowspfad
+        Path dest = Path.of(destRoot.toString(), zipFile.toString());  // windowspfad
         Files.copy(zipFile, dest, StandardCopyOption.REPLACE_EXISTING);
         return FileVisitResult.CONTINUE;
     }
